[package]
name = "builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orchestra-builder"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
dialoguer = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common = { path = "../common", features = ["forward-secrecy"] }
optimizer = { path = "../optimizer" }
rand = "0.8"
which = "6.0"

[build-dependencies]
built = "0.7"
