[package]
name = "builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orchestra-builder"
path = "src/main.rs"

[features]
diversification = ["optimizer/diversification"]
default = []

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
toml = { workspace = true }
serde.workspace = true
dialoguer = { workspace = true }
base64.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common = { path = "../common" }
optimizer = { path = "../optimizer", optional = true }
rand = "0.8"
which = "6.0"
ring = "0.17.14"
serde_json = "1.0.149"

[build-dependencies]
built = "0.7"
