[package]
name = "builder"
description = "Profile-driven agent build pipeline with cross-compilation and PE artifact diversification"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "builder"
path = "src/lib.rs"

[[bin]]
name = "orchestra-builder"
path = "src/main.rs"

[features]
diversification = ["optimizer/diversification"]
default = []

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
toml = { workspace = true }
serde.workspace = true
dialoguer = { workspace = true }
base64.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common = { path = "../common" }
optimizer = { path = "../optimizer", optional = true }
shellcode_packager = { path = "../shellcode_packager" }
rand = "0.8"
goblin = "0.8"
which = "6.0"
serde_json = { workspace = true }

[build-dependencies]
built = "0.7"

[[bin]]
name = "orchestra-pe-hardener"
path = "src/bin/orchestra-pe-hardener.rs"
