[package]
name = "code_transform"
version = "0.1.0"
edition = "2021"

[dependencies]
iced-x86 = { version = "1", features = [
    "decoder",
    "encoder",
    "block_encoder",
] }
rand = { workspace = true }
rand_chacha = "0.3"
log = "0.4"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
libc = "0.2"

[dev-dependencies]
libc = "0.2"
