[package]
name = "code_transform_macro"
description = "Proc-macro attribute wrapper for applying code_transform passes at compile time"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
code_transform = { path = "../code_transform" }
