[package]
name = "common"
description = "Shared protocol types, AES-256-GCM crypto session, transport traits, and wire message definitions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = "0.4"
serde = { workspace = true }
thiserror = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true, features = ["net", "io-util"] }
serde_json = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = "2.2.0"
hkdf = { version = "0.13" }
hmac = { version = "0.13" }
zeroize = "1"

# Optional: Ed25519 signatures for module verification.
# Enabled by the `module-signatures` feature.
ed25519-dalek = { version = "2", optional = true }
# X25519 ephemeral DH for application-layer forward secrecy.
# Always enabled — each session performs ECDH to derive a per-session key.
x25519-dalek = { version = "2" }
bincode = { version = "2", features = ["serde"] }

# Memory locking for PSK protection (mlock on Unix, VirtualLock on Windows).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
pe_resolve = { path = "../pe_resolve" }

[features]
default = ["module-signatures"]
module-signatures = ["dep:ed25519-dalek"]
dangerous-tls = []
# NOTE: Forward secrecy (X25519 ECDH) is always enabled — the
# `common::forward_secrecy` module is compiled unconditionally.
# The old `forward-secrecy` feature flag has been removed because
# it was a misleading no-op that gated nothing.

[dev-dependencies]
serde_json = { workspace = true }
proptest = "1.4"
