[package]
name = "console"
description = "Operator console CLI for agent management, tasking, and monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
base64 = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
rustls = "0.23.38"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
rcgen = "0.14.7"
